--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 
 <body id="container_all">
 
-    <div id="menu" class="menu-container">
-        <label for="pageSelect">You are on page:</label>
-        <select id="pageSelect" onchange="navigateToPage()">
-            <option value="" disabled selected>Select a page</option>
-            <option value="index.html">Page 1</option>
-            <option value="planets.html">Page 2</option>
-            <option value="page3.html">Page 3</option>
-            <option value="strategy_map.html">Strategy Map</option>
-        </select>
-    </div>
+    <nav class="menu">
+        <div class="menu-container">
+            <button class="menu-button">Menu</button>
+            <div class="menu-links">
+                <a href="index.html">Court</a>
+                <a href="families.html">Families</a>
+                <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
+                <a href="https://federicoferoggio.github.io/stardom_odyssey/">Planets Explorer</a>
+            </div>
+        </div>
+    </nav>
 
     <div id="controls">
         <label for="monthInput">Current Month:</label>
