final final fixes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
 
-            <div id="dynamicDescription" style="line-height: 1.4;">
+            <div id="dynamicDescription">
                 <!-- Dynamic description will appear here -->
             </div>
 
