fixed links and map page

--- a/families.html
+++ b/families.html
@@ -24,7 +24,7 @@
                 <a href="families.html">Families</a>
                 <a href="map.html">Overview Map</a>
                 <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
-                <a href="https://federicoferoggio.github.io/stardom_odyssey/">Planets Explorer</a>
+                <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
             </div>
         </div>
     </nav>
