--- a/map.html
+++ b/map.html
@@ -23,6 +23,11 @@
             <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
         </div>
     </div>
+    <div class="slider-container">
+      <label for="speed-slider">Animation Speed:</label>
+      <input type="range" id="speed-slider" min="0.1" max="5" step="0.1" value="1">
+      <span id="speed-value">1x</span>
+    </div>
 </nav>
   <div id="map-container">
     <svg id="solar-map" xmlns="http://www.w3.org/2000/svg">
