--- a/map.html
+++ b/map.html
@@ -17,8 +17,8 @@
         <button class="menu-button">Menu</button>
         <div class="menu-links">
             <a href="index.html">Court</a>
+            <a href="scrolls.html">Army</a>
             <a href="families.html">Families</a>
-            <a href="map.html">Overview Map</a>
             <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
             <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
         </div>
