--- a/scrolls.html
+++ b/scrolls.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="scrolls.css">
 </head>
 
-<body class="bg-gray-900 text-gray-200">
+<body id="container_all">
     <nav class="menu">
         <div class="menu-container">
             <button class="menu-button">Menu</button>
