--- a/scrolls.html
+++ b/scrolls.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Warscroll & Card Viewer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,31 +31,28 @@
         </div>
     </nav>
 
-    <div class="container mx-auto p-4 md:p-8" style="overflow: visible !important;">
-        <h1 class="text-4xl md:text-5xl text-center mb-8 header-title">Warscroll Library</h1>
+    <div class="container">
+        <h1 class="header-title">Warscroll Library</h1>
 
-        <div class="relative mb-12">
-            <div id="warscroll-container"
-                class="warscroll-container rounded-lg bg-gray-800 min-h-[200px] flex items-center justify-center">
-                <p id="warscroll-loader" class="text-gray-400">Loading Warscrolls...</p>
+        <div class="warscroll-section">
+            <div id="warscroll-container" class="warscroll-container">
+                <p id="warscroll-loader" class="loader-text">Loading Warscrolls...</p>
             </div>
 
-            <button id="prev-btn"
-                class="nav-btn absolute top-1/2 left-0 transform -translate-y-1/2 -translate-x-4 md:-translate-x-6 w-12 h-12 md:w-14 md:h-14 rounded-full flex items-center justify-center text-2xl z-10 hidden">
+            <button id="prev-btn" class="nav-btn hidden">
                 <i class="fas fa-chevron-left"></i>
             </button>
-            <button id="next-btn"
-                class="nav-btn absolute top-1/2 right-0 transform -translate-y-1/2 translate-x-4 md:translate-x-6 w-12 h-12 md:w-14 md:h-14 rounded-full flex items-center justify-center text-2xl z-10 hidden">
+            <button id="next-btn" class="nav-btn hidden">
                 <i class="fas fa-chevron-right"></i>
             </button>
         </div>
 
-        <div>
-            <h2 class="text-2xl md:text-3xl text-center mb-6 header-title">Available Cards</h2>
+        <div class="cards-section">
+            <h2 class="header-title">Available Cards</h2>
 
             <div class="card-scroller-container">
-                <div id="card-scroller" class="card-scroller space-x-8 pb-4">
-                    <p id="card-loader" class="text-gray-400">Loading Cards...</p>
+                <div id="card-scroller" class="card-scroller">
+                    <p id="card-loader" class="loader-text">Loading Cards...</p>
                 </div>
             </div>
         </div>
