--- a/scrolls.html
+++ b/scrolls.html
@@ -31,6 +31,24 @@
         </div>
     </nav>
 
+    <button class="side-menu-button">Open Army Builder</button>
+
+    <div id="side-menu" class="side-menu">
+        <button class="close-side-menu-button">X</button>
+        <div class="side-menu-content">
+            <div class="army-builder-section">
+                <h3>Create Your Own Army</h3>
+                <div id="unitQuantityInputs">
+                    </div>
+                <div id="armyTotals"></div>
+                <div class="points-bar-container">
+                    <div class="points-bar-fill" id="pointsProgressBar"></div>
+                    <div class="points-bar-text" id="pointsProgressText">0 / 500 Points</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <h1 class="header-title">Warscroll Library</h1>
 
