--- a/families.html
+++ b/families.html
@@ -38,6 +38,7 @@
         <!-- Amoako Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/AmoakoIcon.png" alt="Amoako Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Amoako</h2>
             <p class="family-motto">"Il rischio è il gioco, il guadagno il trofeo"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -74,6 +75,7 @@
         <!-- Caillot Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/CaillotIcon.png" alt="Caillot Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Caillot</h2>
             <p class="family-motto">"Dalla frusta al pane."</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -136,6 +138,7 @@
         <!-- Carxus Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/CarxusIcon.png" alt="Carxus Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Carxus</h2>
             <p class="family-motto">"Dove finisce il mondo, plasmiamo l'infinito"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -167,6 +170,7 @@
         <!-- Grayshine Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/GrayshineIcon.png" alt="Grayshine Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Grayshine</h2>
             <p class="family-motto">"Oro e potere, come alba e giorno."</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -202,6 +206,7 @@
         <!-- Hai Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/HaiIcon.png" alt="Hai Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Hai</h2>
             <p class="family-motto">"Figli del conflitto, padroni delle ceneri"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -229,6 +234,7 @@
         <!-- Kesk Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/KeskIcon.png" alt="Kesk Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Kesk</h2>
             <p class="family-motto">"La purezza nella sofferenza"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -279,6 +285,7 @@
         <!-- Mitsumoro Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/MitsumoroIcon.png" alt="Mitsumoro Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Mitsumoro</h2>
             <p class="family-motto">"Scritto col sangue"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -322,6 +329,7 @@
         <!-- Ntsu Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/NtsuIcon.png" alt="Ntsu Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Ntsu</h2>
             <p class="family-motto">"Chi tutto rivela, tutto perde"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -355,6 +363,7 @@
         <!-- Ousssek Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/OusssekIcon.png" alt="Ousssek Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Ousssek</h2>
             <p class="family-motto">"Nel nome di Lei"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -400,6 +409,7 @@
         <!-- Rasaily Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/RasailyIcon.png" alt="Rasaily Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Rasaily</h2>
             <p class="family-motto">"Conquista, distruggi, domina"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -434,6 +444,7 @@
         <!-- Rivera Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/RiveraIcon.png" alt="Rivera Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Rivera</h2>
             <p class="family-motto">"Nati per dominare"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -466,6 +477,7 @@
         <!-- Shawel Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/ShawelIcon.png" alt="Shawel Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Shawel</h2>
             <p class="family-motto">"La forza sta nel metallo, l'anima nella fucina"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -492,6 +504,7 @@
         <!-- Sifu Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/SifuIcon.png" alt="Sifu Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Sifu</h2>
             <p class="family-motto">"Caos Deos"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -539,6 +552,7 @@
         <!-- Sudriz Family (Corrected) -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/SudrizIcon.png" alt="Sudriz Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Sudriz</h2>
             <p class="family-motto">"Dal popolo, per il popolo, con il popolo"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -578,6 +592,7 @@
         <!-- Stozav Family (Corrected) -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/StozavIcon.png" alt="Stozav Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Stozav</h2>
             <p class="family-motto">"Nessuna catena, nessun limite."</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -622,6 +637,7 @@
         <!-- Wueng Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/WuengIcon.png" alt="Wueng Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Wueng</h2>
             <p class="family-motto">"In pace in guerra, in guerra in pace"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
@@ -683,13 +699,15 @@
         <!-- Zolinath Family -->
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/ZolinathIcon.png" alt="Zolinath Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">Zolinath</h2>
             <p class="family-motto">"Il falso cade, il vero resta"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
             <p class="family-generated-description"></p>
             <p class="family-description">I Zolinath sono i principali arbitri di giustizia nello Stardom, governando la
                 luna di Zimurn con un pugno di ferro. La loro società è guidata da potenti Giudici, incaricati di
-                mantenere l'ordine e di eseguire le sentenze. L'élite, nota come gli Argaonne, sono rispettati ed usati in tutto il sistema
+                mantenere l'ordine e di eseguire le sentenze. L'élite, nota come gli Argaonne, sono rispettati ed usati
+                in tutto il sistema
                 per la loro totale incapacità di mentire, fungendo da garanti di verità nelle negoziazioni e nei
                 processi legali fra diverse famiglie.</p>
 
@@ -712,6 +730,7 @@
 
         <div class="family-entry">
             <img class="family-banner" src="images/symbols/HandIcon.png" alt="Hand Banner">
+            <p class="family-government"></p>
             <h2 class="family-name">La Mano</h2>
             <p class="family-motto">"Nel nome di Dio"</p>
             <img class="family-total-power" src="images/deadlyness/10.svg">
