--- a/families.html
+++ b/families.html
@@ -161,8 +161,8 @@
                     <p>Rauni</p>
                 </div>
                 <div class="member">
-                    <img src="images/members/Heikkilä.webp" alt="Heikkilä">
-                    <p>Heikkilä</p>
+                    <img src="images/members/Heikkila.webp" alt="Heikkila">
+                    <p>Heikkila</p>
                 </div>
             </div>
         </div>
@@ -583,8 +583,8 @@
                     <p>Luka</p>
                 </div>
                 <div class="member">
-                    <img src="images/members/Vukašin.webp" alt="Vukašin">
-                    <p>Vukašin</p>
+                    <img src="images/members/Vukasin.webp" alt="Vukasin">
+                    <p>Vukasin</p>
                 </div>
             </div>
         </div>
@@ -718,8 +718,8 @@
                     <p>Prasantha</p>
                 </div>
                 <div class="member">
-                    <img src="images/members/Égide.webp" alt="Égide">
-                    <p>Égide</p>
+                    <img src="images/members/Egide.webp" alt="Egide">
+                    <p>Egide</p>
                 </div>
                 <div class="member">
                     <img src="images/members/Alexis.webp" alt="Alexis">
