--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h2>Company Actions</h2>
             <label for="actionsMenu">Choose an Action:</label>
             <select id="actionsMenu" onchange="updateActionDetails()">
-                <option value="" disabled selected>Select an action</option>
+                <option value="" disabled selected>Select an Action</option>
                 <!-- Actions from the Reign file will be populated here -->
             </select>
 
